css/style.css
:root{
--bg:#0f172a;
--card:#1e293b;
--text:#ffffff;
--primary:#38bdf8;
}

[data-theme="light"]{
--bg:#ffffff;
--card:#f3f4f6;
--text:#111827;
--primary:#2563eb;
}

*{
margin:0;
padding:0;
box-sizing:border-box;
scroll-behavior:smooth;
}

body{
font-family:'Poppins',sans-serif;
background:var(--bg);
color:var(--text);
}

.navbar{
display:flex;
justify-content:space-between;
align-items:center;
padding:20px 10%;
}

.logo{
font-size:2rem;
}

#theme-toggle{
padding:10px;
cursor:pointer;
border:none;
border-radius:8px;
}
.hero{
  min-height:100vh;
  display:flex;
  justify-content:center;
  align-items:center;
  text-align:center;

  background: linear-gradient(
    135deg,
    #0f172a,
    #1e293b,
    #334155
  );
}

.hero h1{
font-size:4rem;
margin-bottom:20px;
font-weight:700;
}

.hero p{
font-size:1.2rem;
margin-bottom:30px;
}


.hero-buttons{
  display:flex;
  justify-content:center;
  gap:15px;
  flex-wrap:wrap;
}

.btn{
background:var(--primary);
color:white;
padding:12px 24px;
border-radius:10px;
text-decoration:none;
font-weight:600;
}

.secondary{
margin-left:10px;
}

.socials a{
color:var(--text);
text-decoration:none;
margin:0 10px;
font-weight:600;
}

.about,
.skills,
.projects,
.contact{
padding:80px 10%;
}

.about h2,
.skills h2,
.projects h2,
.contact h2{
margin-bottom:30px;
}

.skills-grid,
.projects-grid{
display:grid;
grid-template-columns:
repeat(auto-fit,minmax(250px,1fr));
gap:20px;
}

.card,
.project-card{
background:var(--card);
padding:25px;
border-radius:15px;
transition:0.3s;
}
.card,
.project-card{
transition:all 0.3s ease;
}

.card:hover,
.project-card:hover{
transform:translateY(-8px);
}



.contact form{
display:flex;
flex-direction:column;
gap:15px;
}

input,
textarea{
padding:15px;
border:none;
border-radius:10px;
color: #96d8ef;
}

textarea{
height:120px;
}

form button{
padding:15px;
border:none;
border-radius:10px;
background:var(--primary);
color:rgb(173, 253, 246);
cursor:pointer;
}

footer{
text-align:center;
padding:30px;
}
.project-img{
width:100%;
height:220px;
object-fit:cover;
border-radius:12px;
margin:15px 0;
}
.project-card{
  background: var(--card);
  border-radius: 16px;
  overflow: hidden;
  box-shadow: 0 5px 15px rgba(0,0,0,0.15);
}

.project-card h3{
  margin-bottom: 15px;
}

.project-card h4{
  margin-top: 15px;
  margin-bottom: 10px;
}

.project-card ul{
  padding-left: 20px;
}

.project-card li{
  margin-bottom: 6px;
}
.about-list{
margin-top:20px;
padding-left:20px;
}

.about-list li{
margin-bottom:12px;
font-size:1rem;
}

